package.json edited

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jumping_numbers",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pawlo1994.github.io/catch_the_number/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
